--- a/src/pages/bioinfo.astro
+++ b/src/pages/bioinfo.astro
@@ -17,8 +17,40 @@ const last_posts = posts.slice(0, 3);
 <BaseLayout>
 
 
+  
+ <! –– THE FIRST  ––>
 
-<div class="text-2xl font-bold"> <span class='bigger'>(1)</span> <span class='headmain'>ExPCom: a tool to infer cell-cell communnication using a scRNAseq dataset </span> </div>
+
+      
+
+ <div class="text-2xl font-bold"> <span class='bigger'>(1)</span> <span class='headmain'>ToxChemMap: a tool to visualize toxicological and physicochemical properties of EU relevant chemicals </span> </div>
+
+<div class="social-icons px-6 my-2 py-2 flex"><a href="/Categories.html" target="_blank" class="mx-3" aria-label="ToxChemMap" title="ToxChemMap">
+<img src="/p1.png" alt="Italian Trulli" width="650" height="400"> </img> </a></div>
+
+<div class="social-icons px-6 my-2 py-2 flex"><a href="https://github.com/dalodriguez/ToxChemMap/" target="_blank" class="mx-3" aria-label="Github" title="Github">
+ <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="#000000" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M1 12s4-8 11-8 11 8 11 8-4 8-11 8-11-8-11-8z"></path><circle cx="12" cy="12" r="3"></circle></svg>
+    <a href="/Categories.html" target="_blank"><b> Example: Categories </b></a> </a></div>
+
+     <p align="justify"><div class="py-1"><text class="text-lg"><div class="mb-1 text-justify">
+       <b>[Under construction] </b>
+       This tool provides a framework to explore physicochemical, human toxicological and ecotoxicological properties
+       of hundred of thousands of chemicals relevant in the EU context.      
+           </div></text> </div></p>
+
+
+
+   <p align="justify"><div class="py-1"><text class="text-lg"> <div class="mb-1 text-justify"></div></text> </div></p>
+   <div class="divider my-0"></div>
+ <div class="mt-8"></div>
+ </div>
+
+ 
+
+
+  <! –– THE SECOND ––>
+
+<div class="text-2xl font-bold"> <span class='bigger'>(2)</span> <span class='headmain'>ExPCom: a tool to infer cell-cell communnication using a scRNAseq dataset </span> </div>
 
 <div class="social-icons px-6 my-2 py-2 flex"><a href="https://github.com/dalodriguez/ExPCom/" target="_blank" class="mx-3" aria-label="ExPCom" title="ExPCom">
       <img src="/TanyCom.png" alt="Italian Trulli" width="700" height="400"> </img> </a></div>
@@ -37,9 +69,10 @@ const last_posts = posts.slice(0, 3);
 
 
     <div class="divider my-0"></div>
+    <div class="mt-8"></div>
+    <! –– THE THIRD  ––>
 
-
-    <div class="text-2xl font-bold"> <span class='bigger'>(2)</span> <span class='headmain'>DPGEA: a Differential Pseudospatial Gradient Expression Analysis for scRNAseq data </span> </div>
+    <div class="text-2xl font-bold"> <span class='bigger'>(3)</span> <span class='headmain'>DPGEA: a Differential Pseudospatial Gradient Expression Analysis for scRNAseq data </span> </div>
 
     <div class="social-icons px-6 my-2 py-2 flex"><a href="https://github.com/dalodriguez/DPGEA/" target="_blank" class="mx-3" aria-label="DPGEA" title="DPGEA">
       <img src="/DPGEA_prin.png" alt="Italian Trulli" width="750" height="500"> </img> </a></div>
@@ -60,10 +93,11 @@ const last_posts = posts.slice(0, 3);
 
 
           <p align="justify"><div class="py-1"><text class="text-lg"> <div class="mb-1 text-justify"></div></text> </div></p>
-
+          <div class="divider my-0"></div>
         <div class="mt-8"></div>
         </div>
 
+    
 
 
 
