--- a/src/pages/bioinfo.astro
+++ b/src/pages/bioinfo.astro
@@ -23,7 +23,7 @@ const last_posts = posts.slice(0, 3);
 
       
 
- <div class="text-2xl font-bold"> <span class='bigger'>(1)</span> <span class='headmain'>ToxChemMap: a tool to visualize toxicological and physicochemical properties of EU relevant chemicals </span> </div>
+ <div class="text-2xl font-bold"> <span class='bigger'>(1)</span> <span class='headmain'>ToxChemMap. A tool to visualize toxicological and physicochemical properties of EU relevant chemicals </span> </div>
 
 <div class="social-icons px-6 my-2 py-2 flex"><a href="/Categories.html" target="_blank" class="mx-3" aria-label="ToxChemMap" title="ToxChemMap">
 <img src="/p1.png" alt="Italian Trulli" width="650" height="400"> </img> </a></div>
@@ -50,7 +50,7 @@ const last_posts = posts.slice(0, 3);
 
   <! –– THE SECOND ––>
 
-<div class="text-2xl font-bold"> <span class='bigger'>(2)</span> <span class='headmain'>ExPCom: a tool to infer cell-cell communnication using a scRNAseq dataset </span> </div>
+<div class="text-2xl font-bold"> <span class='bigger'>(2)</span> <span class='headmain'>ExPCom. A tool to infer cell-cell communnication using a scRNAseq dataset </span> </div>
 
 <div class="social-icons px-6 my-2 py-2 flex"><a href="https://github.com/dalodriguez/ExPCom/" target="_blank" class="mx-3" aria-label="ExPCom" title="ExPCom">
       <img src="/TanyCom.png" alt="Italian Trulli" width="700" height="400"> </img> </a></div>
@@ -72,7 +72,7 @@ const last_posts = posts.slice(0, 3);
     <div class="mt-8"></div>
     <! –– THE THIRD  ––>
 
-    <div class="text-2xl font-bold"> <span class='bigger'>(3)</span> <span class='headmain'>DPGEA: a Differential Pseudospatial Gradient Expression Analysis for scRNAseq data </span> </div>
+    <div class="text-2xl font-bold"> <span class='bigger'>(3)</span> <span class='headmain'>DPGEA. A Differential Pseudospatial Gradient Expression Analysis for scRNAseq data </span> </div>
 
     <div class="social-icons px-6 my-2 py-2 flex"><a href="https://github.com/dalodriguez/DPGEA/" target="_blank" class="mx-3" aria-label="DPGEA" title="DPGEA">
       <img src="/DPGEA_prin.png" alt="Italian Trulli" width="750" height="500"> </img> </a></div>
