--- a/src/pages/bioinfo.astro
+++ b/src/pages/bioinfo.astro
@@ -30,7 +30,7 @@ const last_posts = posts.slice(0, 3);
 
 <div class="social-icons px-6 my-2 py-2 flex"><a href="https://github.com/dalodriguez/ToxChemMap/" target="_blank" class="mx-3" aria-label="Github" title="Github">
  <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="#000000" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M1 12s4-8 11-8 11 8 11 8-4 8-11 8-11-8-11-8z"></path><circle cx="12" cy="12" r="3"></circle></svg>
-    <a href="/Categories.html" target="_blank"><b> Example: Categories </b></a> </a></div>
+    <a href="/Categories.html" target="_blank"><b> Example: Chemical Categories </b></a> </a></div>
 
      <p align="justify"><div class="py-1"><text class="text-lg"><div class="mb-1 text-justify">
        <b>[Under construction] </b>
@@ -50,7 +50,7 @@ const last_posts = posts.slice(0, 3);
 
   <! –– THE SECOND ––>
 
-<div class="text-2xl font-bold"> <span class='bigger'>(2)</span> <span class='headmain'>ExPCom. A tool to infer cell-cell communnication using a scRNAseq dataset </span> </div>
+<div class="text-2xl font-bold"> <span class='bigger'>(2)</span> <span class='headmain'>ExPCom. A tool to infer cell-cell communnication using scRNAseq datasets </span> </div>
 
 <div class="social-icons px-6 my-2 py-2 flex"><a href="https://github.com/dalodriguez/ExPCom/" target="_blank" class="mx-3" aria-label="ExPCom" title="ExPCom">
       <img src="/TanyCom.png" alt="Italian Trulli" width="700" height="400"> </img> </a></div>
