--- a/src/pages/bioinfo.astro
+++ b/src/pages/bioinfo.astro
@@ -33,7 +33,7 @@ const last_posts = posts.slice(0, 3);
     <a href="/Categories.html" target="_blank"><b> Example: Chemical Categories </b></a> </a></div>
 
      <p align="justify"><div class="py-1"><text class="text-lg"><div class="mb-1 text-justify">
-       <b>[Under construction] </b>
+       <b>[...Under construction...] </b>
        This tool provides a framework to explore physicochemical, human toxicological and ecotoxicological properties
        of hundred of thousands of chemicals relevant in the EU context.      
            </div></text> </div></p>
