--- a/src/pages/bioinfo.astro
+++ b/src/pages/bioinfo.astro
@@ -47,10 +47,25 @@ const last_posts = posts.slice(0, 3);
 
  
 
+ <! –– THE SECOND ––>
 
-  <! –– THE SECOND ––>
+<div class="text-2xl font-bold"> <span class='bigger'>(2)</span> <span class='headmain'>HypCCAtlas. A functional hypothalamic atlas of cell-cell communication </span> </div>
 
-<div class="text-2xl font-bold"> <span class='bigger'>(2)</span> <span class='headmain'>ExPCom. A tool to infer cell-cell communnication using scRNAseq datasets </span> </div>
+<div class="social-icons px-6 my-2 py-2 flex"><a href="" target="_blank" class="mx-3" aria-label="ExPCom" title="ExPCom">
+      <img src="/Network.png" alt="Italian Trulli" width="700" height="200"> </img> </a></div>
+
+    <p align="justify"><div class="py-1"><text class="text-lg"><div class="mb-1 text-justify">
+      <b>[...Under construction...] </b> 
+      HypCCAtlas is an interactive web-based tool to explore and infer cell-cell communication signals using scRNAseq datasets.  
+              </div> </text> </div></p>
+
+
+    <div class="divider my-0"></div>
+    <div class="mt-8"></div>
+
+  <! –– THE THIRD ––>
+
+<div class="text-2xl font-bold"> <span class='bigger'>(3)</span> <span class='headmain'>ExPCom. A tool to infer cell-cell communnication using scRNAseq datasets </span> </div>
 
 <div class="social-icons px-6 my-2 py-2 flex"><a href="https://github.com/dalodriguez/ExPCom/" target="_blank" class="mx-3" aria-label="ExPCom" title="ExPCom">
       <img src="/TanyCom.png" alt="Italian Trulli" width="700" height="400"> </img> </a></div>
@@ -70,9 +85,9 @@ const last_posts = posts.slice(0, 3);
 
     <div class="divider my-0"></div>
     <div class="mt-8"></div>
-    <! –– THE THIRD  ––>
+    <! –– THE FOURTH  ––>
 
-    <div class="text-2xl font-bold"> <span class='bigger'>(3)</span> <span class='headmain'>DPGEA. A Differential Pseudospatial Gradient Expression Analysis for scRNAseq data </span> </div>
+    <div class="text-2xl font-bold"> <span class='bigger'>(4)</span> <span class='headmain'>DPGEA. A Differential Pseudospatial Gradient Expression Analysis for scRNAseq data </span> </div>
 
     <div class="social-icons px-6 my-2 py-2 flex"><a href="https://github.com/dalodriguez/DPGEA/" target="_blank" class="mx-3" aria-label="DPGEA" title="DPGEA">
       <img src="/DPGEA_prin.png" alt="Italian Trulli" width="750" height="500"> </img> </a></div>
