--- a/src/pages/bioinfo.astro
+++ b/src/pages/bioinfo.astro
@@ -15,7 +15,15 @@ const last_posts = posts.slice(0, 3);
 
 
 <BaseLayout>
+<!-- Google tag (gtag.js) -->
+<script type="text/partytown" async src="https://www.googletagmanager.com/gtag/js?id=G-T3S8LY51Z2"></script>
+<script type="text/partytown">
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'G-T3S8LY51Z2');
+</script>
 
   
  <! –– THE FIRST -  ––>
